fixes y todo, se agrego carpeta de controladores y browserlist

--- a/views/shared/error_partial.ejs
+++ b/views/shared/error_partial.ejs
@@ -1,4 +1,4 @@
-<div class="m-0 rounded-0 shadow-none d-flex justify-content-center align-items-center" style="min-height: 80vh;" >
+<div class="m-0 rounded-0 shadow-none d-flex justify-content-center align-items-center error_page" style="min-height: 80vh;" >
   <div class="row g-0 col-md-10 col-sm-12">
     <div class="col-md-4 container-card-img">
       <img src="/images/gif_404_02.gif" class='img-fluid' 
